// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Connecting should add edge 1`] = `
{
  "edges": [
    {
      "id": "mock-uuid",
      "source": "0",
      "sourcePortId": "1",
      "status": 0,
      "target": "1",
      "targetPortId": "1",
    },
  ],
  "nodes": [
    {
      "height": 100,
      "id": "0",
      "ports": [
        {
          "data": {
            "isConnectable": false,
          },
          "id": "0",
          "isInputDisabled": false,
          "isOutputDisabled": true,
          "name": "0",
          "position": [
            0.5,
            0,
          ],
          "status": 0,
        },
        {
          "data": {
            "isConnectable": true,
          },
          "id": "1",
          "isInputDisabled": true,
          "isOutputDisabled": false,
          "name": "1",
          "position": [
            0.5,
            1,
          ],
          "status": 0,
        },
      ],
      "width": 100,
      "x": 50,
      "y": 50,
    },
    {
      "height": 100,
      "id": "1",
      "ports": [
        {
          "data": {
            "isConnectable": false,
          },
          "id": "0",
          "isInputDisabled": false,
          "isOutputDisabled": true,
          "name": "0",
          "position": [
            0.5,
            0,
          ],
          "status": 0,
        },
        {
          "data": {
            "isConnectable": true,
          },
          "id": "1",
          "isInputDisabled": true,
          "isOutputDisabled": false,
          "name": "1",
          "position": [
            0.5,
            1,
          ],
          "status": 0,
        },
      ],
      "width": 100,
      "x": 150,
      "y": 150,
    },
    {
      "height": 150,
      "id": "2",
      "ports": [
        {
          "data": {
            "isConnectable": false,
          },
          "id": "0",
          "isInputDisabled": false,
          "isOutputDisabled": true,
          "name": "0",
          "position": [
            0.5,
            0,
          ],
          "status": 0,
        },
        {
          "data": {
            "isConnectable": true,
          },
          "id": "1",
          "isInputDisabled": true,
          "isOutputDisabled": false,
          "name": "1",
          "position": [
            0.5,
            1,
          ],
          "status": 0,
        },
      ],
      "width": 150,
      "x": 250,
      "y": 250,
    },
  ],
}
`;

exports[`test Connecting should add edge 2`] = `undefined`;

exports[`test Connecting should add edge: events 1`] = `
[
  "[Canvas]ViewportResize",
  "[Canvas]VirtualizationRecalculated",
  "[Canvas]ViewportResize",
  "[Edge]ConnectStart",
  "[Port]PointerEnter",
  "[Edge]ConnectEnd",
]
`;

exports[`test Connecting should attach nearest port by mouse, should not add edge after mouse leave: events 1`] = `
[
  "[Canvas]ViewportResize",
  "[Canvas]VirtualizationRecalculated",
  "[Canvas]ViewportResize",
  "[Edge]ConnectStart",
  "[Node]PointerEnter",
  "[Node]PointerLeave",
  "[Edge]ConnectEnd",
]
`;

exports[`test Connecting should attach to port 1`] = `
<g>
  <defs>
    <marker
      id="markerArrow"
      markerHeight="10"
      markerUnits="strokeWidth"
      markerWidth="10"
      orient="auto"
      refX="6"
      refY="5"
    >
      <path
        d="M0,0 L6,5 L0,10"
        style="stroke: #0078D4; fill: none;"
      />
    </marker>
  </defs>
  <line
    marker-end="url(#markerArrow)"
    style="stroke: #0078D4; fill: none; stroke-dasharray: 4,4;"
    x1="190"
    x2="190"
    y1="150"
    y2="151"
  />
  <path
    d="M190,150C190,135,190,170,190,155"
    style="stroke: none; fill: none;"
  />
</g>
`;

exports[`test Connecting should attach to port 2`] = `
<g>
  <defs>
    <marker
      id="markerArrow"
      markerHeight="10"
      markerUnits="strokeWidth"
      markerWidth="10"
      orient="auto"
      refX="6"
      refY="5"
    >
      <path
        d="M0,0 L6,5 L0,10"
        style="stroke: none; fill: none;"
      />
    </marker>
  </defs>
  <line
    marker-end="url(#markerArrow)"
    style="stroke: none; fill: none; stroke-dasharray: 4,4;"
    x1="190"
    x2="190"
    y1="150"
    y2="151"
  />
  <path
    d="M290,250C290,202.5,190,202.5,190,155"
    style="stroke: #0078D4; fill: none;"
  />
</g>
`;

exports[`test Connecting should attach to port 3`] = `
{
  "edges": [],
  "nodes": [
    {
      "height": 100,
      "id": "0",
      "ports": [
        {
          "data": {
            "isConnectable": false,
          },
          "id": "0",
          "isInputDisabled": false,
          "isOutputDisabled": true,
          "name": "0",
          "position": [
            0.5,
            0,
          ],
          "status": 0,
        },
        {
          "data": {
            "isConnectable": true,
          },
          "id": "1",
          "isInputDisabled": true,
          "isOutputDisabled": false,
          "name": "1",
          "position": [
            0.5,
            1,
          ],
          "status": 4,
        },
      ],
      "width": 100,
      "x": 50,
      "y": 50,
    },
    {
      "height": 100,
      "id": "1",
      "ports": [
        {
          "data": {
            "isConnectable": false,
          },
          "id": "0",
          "isInputDisabled": false,
          "isOutputDisabled": true,
          "name": "0",
          "position": [
            0.5,
            0,
          ],
          "status": 0,
        },
        {
          "data": {
            "isConnectable": true,
          },
          "id": "1",
          "isInputDisabled": true,
          "isOutputDisabled": false,
          "name": "1",
          "position": [
            0.5,
            1,
          ],
          "status": 0,
        },
      ],
      "width": 100,
      "x": 150,
      "y": 150,
    },
    {
      "height": 150,
      "id": "2",
      "ports": [
        {
          "data": {
            "isConnectable": false,
          },
          "id": "0",
          "isInputDisabled": false,
          "isOutputDisabled": true,
          "name": "0",
          "position": [
            0.5,
            0,
          ],
          "status": 0,
        },
        {
          "data": {
            "isConnectable": true,
          },
          "id": "1",
          "isInputDisabled": true,
          "isOutputDisabled": false,
          "name": "1",
          "position": [
            0.5,
            1,
          ],
          "status": 0,
        },
      ],
      "width": 150,
      "x": 250,
      "y": 250,
    },
  ],
}
`;

exports[`test Connecting should attach to port 4`] = `
<g>
  <defs>
    <marker
      id="markerArrow"
      markerHeight="10"
      markerUnits="strokeWidth"
      markerWidth="10"
      orient="auto"
      refX="6"
      refY="5"
    >
      <path
        d="M0,0 L6,5 L0,10"
        style="stroke: #0078D4; fill: none;"
      />
    </marker>
  </defs>
  <line
    marker-end="url(#markerArrow)"
    style="stroke: #0078D4; fill: none; stroke-dasharray: 4,4;"
    x1="190"
    x2="190"
    y1="150"
    y2="151"
  />
  <path
    d="M190,150C190,135,190,170,190,155"
    style="stroke: none; fill: none;"
  />
</g>
`;

exports[`test Connecting should attach to port when mouse enter a connectable port, should not add edge after mouse leave 1`] = `
<g>
  <defs>
    <marker
      id="markerArrow"
      markerHeight="10"
      markerUnits="strokeWidth"
      markerWidth="10"
      orient="auto"
      refX="6"
      refY="5"
    >
      <path
        d="M0,0 L6,5 L0,10"
        style="stroke: #0078D4; fill: none;"
      />
    </marker>
  </defs>
  <line
    marker-end="url(#markerArrow)"
    style="stroke: #0078D4; fill: none; stroke-dasharray: 4,4;"
    x1="190"
    x2="190"
    y1="150"
    y2="151"
  />
  <path
    d="M190,150C190,135,190,170,190,155"
    style="stroke: none; fill: none;"
  />
</g>
`;

exports[`test Connecting should attach to port when mouse enter a connectable port, should not add edge after mouse leave 2`] = `
<g>
  <defs>
    <marker
      id="markerArrow"
      markerHeight="10"
      markerUnits="strokeWidth"
      markerWidth="10"
      orient="auto"
      refX="6"
      refY="5"
    >
      <path
        d="M0,0 L6,5 L0,10"
        style="stroke: #0078D4; fill: none;"
      />
    </marker>
  </defs>
  <line
    marker-end="url(#markerArrow)"
    style="stroke: #0078D4; fill: none; stroke-dasharray: 4,4;"
    x1="190"
    x2="190"
    y1="150"
    y2="151"
  />
  <path
    d="M190,150C190,135,190,170,190,155"
    style="stroke: none; fill: none;"
  />
</g>
`;

exports[`test Connecting should attach to port when mouse enter a connectable port, should not add edge after mouse leave 3`] = `
<g>
  <defs>
    <marker
      id="markerArrow"
      markerHeight="10"
      markerUnits="strokeWidth"
      markerWidth="10"
      orient="auto"
      refX="6"
      refY="5"
    >
      <path
        d="M0,0 L6,5 L0,10"
        style="stroke: #0078D4; fill: none;"
      />
    </marker>
  </defs>
  <line
    marker-end="url(#markerArrow)"
    style="stroke: #0078D4; fill: none; stroke-dasharray: 4,4;"
    x1="190"
    x2="190"
    y1="150"
    y2="151"
  />
  <path
    d="M190,150C190,135,190,170,190,155"
    style="stroke: none; fill: none;"
  />
</g>
`;

exports[`test Connecting should attach to port when mouse enter a connectable port, should not add edge after mouse leave 4`] = `
<g>
  <defs>
    <marker
      id="markerArrow"
      markerHeight="10"
      markerUnits="strokeWidth"
      markerWidth="10"
      orient="auto"
      refX="6"
      refY="5"
    >
      <path
        d="M0,0 L6,5 L0,10"
        style="stroke: none; fill: none;"
      />
    </marker>
  </defs>
  <line
    marker-end="url(#markerArrow)"
    style="stroke: none; fill: none; stroke-dasharray: 4,4;"
    x1="190"
    x2="190"
    y1="150"
    y2="151"
  />
  <path
    d="M290,250C290,202.5,190,202.5,190,155"
    style="stroke: #0078D4; fill: none;"
  />
</g>
`;

exports[`test Connecting should attach to port when mouse enter a connectable port, should not add edge after mouse leave 5`] = `
<g>
  <defs>
    <marker
      id="markerArrow"
      markerHeight="10"
      markerUnits="strokeWidth"
      markerWidth="10"
      orient="auto"
      refX="6"
      refY="5"
    >
      <path
        d="M0,0 L6,5 L0,10"
        style="stroke: #0078D4; fill: none;"
      />
    </marker>
  </defs>
  <line
    marker-end="url(#markerArrow)"
    style="stroke: #0078D4; fill: none; stroke-dasharray: 4,4;"
    x1="190"
    x2="190"
    y1="150"
    y2="151"
  />
  <path
    d="M190,150C190,135,190,170,190,155"
    style="stroke: none; fill: none;"
  />
</g>
`;

exports[`test Connecting should attach to port when mouse enter a connectable port, should not add edge after mouse leave: events 1`] = `
[
  "[Canvas]ViewportResize",
  "[Canvas]VirtualizationRecalculated",
  "[Canvas]ViewportResize",
  "[Edge]ConnectStart",
  "[Port]PointerEnter",
  "[Port]PointerLeave",
  "[Port]PointerEnter",
  "[Port]PointerLeave",
  "[Edge]ConnectEnd",
]
`;

exports[`test Connecting should attach to port: events 1`] = `
[
  "[Canvas]ViewportResize",
  "[Canvas]VirtualizationRecalculated",
  "[Canvas]ViewportResize",
  "[Edge]ConnectStart",
  "[Port]PointerEnter",
  "[Port]PointerLeave",
]
`;

exports[`test Connecting should not connect: events 1`] = `
[
  "[Canvas]ViewportResize",
  "[Canvas]VirtualizationRecalculated",
  "[Canvas]ViewportResize",
  "[Edge]ConnectStart",
  "[Edge]ConnectEnd",
]
`;

exports[`test Connecting should render invisible lines 1`] = `undefined`;

exports[`test Connecting should render invisible lines: events 1`] = `
[
  "[Canvas]ViewportResize",
  "[Canvas]VirtualizationRecalculated",
  "[Canvas]ViewportResize",
]
`;

exports[`test getNearestConnectablePort should return connectable port: events 1`] = `[]`;

exports[`test getNearestConnectablePort should return nothing with no ports: events 1`] = `[]`;
